--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2018"
 actix-rt = "~1.0"
 actix-web = "~2.0"
 env_logger = "~0.7"
+diesel = { version = "~1.4", features = ["mysql", "chrono"] }
+diesel_migrations = "~1.4"
+dotenv = "~0.15"
 futures = "~0.3"
+chrono = "~0.4"
 log = "~0.4"
 qrcode-generator = "~1.0"
 printpdf = "~0.3"
