--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ diesel = { version = "~1.4", features = ["mysql", "chrono"] }
 diesel_migrations = "~1.4"
 dotenv = "~0.15"
 futures = "~0.3"
-chrono = "~0.4"
+frunk = "~0.3"
+frunk_core = "~0.3"
+chrono = { version = "~0.4", features = ["serde", "rustc-serialize"] }
 log = "~0.4"
 qrcode-generator = "~1.0"
 printpdf = "~0.3"
