--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,7 @@
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.3.4",
     "vue-snotify": "^3.2.1",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.3.3",
     "vuetify-confirm": "^2.0.5",
     "vuex": "^3.5.1",
     "weekstart": "^1.0.1"
@@ -32,13 +32,13 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0",
+    "vuetify-loader": "^1.5.0",
     "webpack-cdn-plugin": "^3.3.1",
-    "webpack-chain": "^6.4.0"
+    "webpack-chain": "^6.5.0"
   },
   "eslintConfig": {
     "root": true,
