Dao: async with_ok and with_found DB: Merged migration into a single one. Reordered some fields. Account table and structs AccountSettings logic.settings, logic.invoices Adding and deleting invoices

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix-cors = "~0.2"
 actix-rt = "~1.0"
 actix-web = "~2.0"
 actix-files = "~0.2"
+async-trait = "~0.1"
 env_logger = "~0.7"
 err-context = "~0.1"
 config = "~0.10"
@@ -24,3 +25,4 @@ log = "~0.4"
 qrcode-generator = "~1.0"
 printpdf = "~0.3"
 serde = { version = "~1.0", features = ["derive"] }
+serde_json = "~1.0"
