--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ actix-rt = "~1.0"
 actix-web = "~2.0"
 actix-files = "~0.2"
 async-trait = "~0.1"
+base64 = "~0.12"
 env_logger = "~0.7"
 err-context = "~0.1"
+humantime = "~1.3"
 config = "~0.10"
 diesel = { version = "~1.4", features = ["mysql", "chrono"] }
 diesel_logger = "~0.1"
@@ -26,3 +28,4 @@ qrcode-generator = "~1.0"
 printpdf = "~0.3"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
+uuid = { version = "~0.8", features = ["serde", "v4"] }
