--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "lodash": "^4.17.20",
     "luxon": "^1.24.1",
+    "sha256": "^0.2.0",
     "v-currency-field": "^3.0.11",
     "vue": "^2.6.11",
     "vue-context": "^5.2.0",
@@ -19,6 +20,7 @@
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.3.4",
     "vue-snotify": "^3.2.1",
+    "vue2-storage": "^5.0.0",
     "vuetify": "^2.3.3",
     "vuetify-confirm": "^2.0.5",
     "vuex": "^3.5.1",
