--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ printpdf = "~0.3"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 uuid = { version = "~0.8", features = ["serde", "v4"] }
+
+[dev-dependencies]
+iban_validate = "~4.0"
