--- a/config/default.toml
+++ b/config/default.toml
@@ -7,6 +7,7 @@ port = 3306
 # missing: username, password
 db_name = "faktury"
 prefer_socket = true
+max_pool_size = 8
 
 [accounts]
 login_ttl = "2 days"
