--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ frunk_core = "~0.3"
 chrono = { version = "~0.4", features = ["serde", "rustc-serialize"] }
 log = "~0.4"
 qrcode-generator = "~1.0"
+percent-encoding = "~2.1"
 printpdf = "~0.3"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
