npm update, audit fix

--- a/front/package.json
+++ b/front/package.json
@@ -9,38 +9,38 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "core-js": "^3.6.4",
+    "core-js": "^3.8.0",
     "lodash": "^4.17.20",
-    "luxon": "^1.24.1",
+    "luxon": "^1.25.0",
     "sha256": "^0.2.0",
-    "v-currency-field": "^3.0.11",
-    "vue": "^2.6.11",
+    "v-currency-field": "^3.1.1",
+    "vue": "^2.6.12",
     "vue-context": "^5.2.0",
-    "vue-datetime": "^1.0.0-beta.13",
+    "vue-datetime": "^1.0.0-beta.14",
     "vue-lodash": "^2.1.2",
-    "vue-router": "^3.3.4",
+    "vue-router": "^3.4.9",
     "vue-snotify": "^3.2.1",
     "vue2-storage": "^5.0.0",
-    "vuetify": "^2.3.3",
-    "vuetify-confirm": "^2.0.5",
-    "vuex": "^3.5.1",
+    "vuetify": "^2.3.19",
+    "vuetify-confirm": "^2.0.6",
+    "vuex": "^3.6.0",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.26.9",
+    "sass": "^1.30.0",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.6",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.5.0",
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0",
     "webpack-cdn-plugin": "^3.3.1",
-    "webpack-chain": "^6.5.0"
+    "webpack-chain": "^6.5.1"
   },
   "eslintConfig": {
     "root": true,
