--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "core-js": "^3.8.0",
+    "core-js": "^3.8.3",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "sha256": "^0.2.0",
@@ -21,22 +21,22 @@
     "vue-router": "^3.4.9",
     "vue-snotify": "^3.2.1",
     "vue2-storage": "^5.0.0",
-    "vuetify": "^2.3.19",
+    "vuetify": "^2.4.2",
     "vuetify-confirm": "^2.0.6",
     "vuex": "^3.6.0",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.9",
-    "@vue/cli-plugin-eslint": "^4.5.9",
-    "@vue/cli-service": "^4.5.9",
+    "@vue/cli-plugin-babel": "^4.5.10",
+    "@vue/cli-plugin-eslint": "^4.5.10",
+    "@vue/cli-service": "^4.5.10",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.30.0",
+    "sass": "^1.32.5",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-cli-plugin-vuetify": "^2.0.9",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0",
     "webpack-cdn-plugin": "^3.3.1",
