--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ async-trait = "0.1.53"
 base64 = "0.13.0"
 env_logger = "0.9.0"
 err-context = "0.1.0"
+hex = "0.4.3"
 humantime = "2.1.0"
 config = "0.13.1"
 diesel = { version = "1.4.8", features = ["mysql", "chrono", "r2d2"] }
@@ -31,6 +32,7 @@ percent-encoding = "2.1.0"
 printpdf = {version = "0.5.2", features = ["embedded_images"]}
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+sha2 = "0.10.2"
 uuid = { version = "1.0.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
